hphp/test/zend/good/ns_061.php
<?php
class A {}
use \A as B;
echo get_class(new B)."\n";