hphp/test/zend/bad/Zend/tests/access_modifiers_003.php
<?php

final final class test {
	function foo() {}
}

echo "Done\n";
?>